# beg

./: README.md  meson.build
include/: affine.h  basic.h  beg.h  bmath.h  camera.h  color.h  ecs.h  game.h  input.h  model.h  renderable.h  shader.h
include/ext/KHR/glad/: glad.h
resources/shaders/: basic copy.frag  basic.frag  basic.vert
src/: affine.cpp  basic.cpp  beg.cpp  bmath.cpp  camera.cpp  color.cpp  ecs.cpp  game.cpp  input.cpp  model.cpp  renderable.cpp  shader.cpp
src/ext/: glad.c
